delete exercise=TRUE from solution chunk

--- a/03-model/08-lesson/03-08-lesson.Rmd
+++ b/03-model/08-lesson/03-08-lesson.Rmd
@@ -473,7 +473,7 @@ lm(___ ~ ___ + ___, data = ___)
 ```
 
 
-```{r ex6-babies2-solution, exercise=TRUE, exercise.eval=TRUE}
+```{r ex6-babies2-solution}
 lm(bwt ~ gestation + age, data = babies)
 ```
 
