add knitr::opts_chunk `verbose=FALSE`
Sometimes I got with plotly the error message "verbose must be TRUE or FALSE". I tried to prevent it with this options. But it does not help (always) ???

--- a/03-model/08-lesson/03-08-lesson.Rmd
+++ b/03-model/08-lesson/03-08-lesson.Rmd
@@ -24,7 +24,8 @@ knitr::opts_chunk$set(fig.align = "center",
                       fig.width = 5,
                       echo = FALSE, 
                       message = FALSE, 
-                      warning = FALSE)
+                      warning = FALSE,
+                      verbose = FALSE)
 
 # data prep --------------------------------------------------------------------
 
