--- a/05-infer/05-lesson/05-05-lesson.Rmd
+++ b/05-infer/05-lesson/05-05-lesson.Rmd
@@ -178,12 +178,12 @@ rent_med_ci <- manhattan %>%
 glimpse(rent_med_ci)
 ```
 
-<div id="bootstrap_distribution-hint">
+```{r bootstrap_distribution-hint, echo = FALSE}
 **Hint:** 
 - In `specify()`, set `response` to `rent` without quotes.
 - In `generate()`, set `reps` to `15000` and `type` to `"bootstrap"`.
 - In `calculate()`, set `stat` to `"median"`.
-</div>
+```
 
 ```{r bootstrap_distribution-solution}
 # Generate bootstrap distribution of medians
@@ -206,34 +206,32 @@ Then, plot a histogram of the bootstrap medians.
 - Using `rent_med_ci`, plot `stat` on the `x` axis.
 - Add a histogram layer with a binwidth of `50`.
 
+```{r bootstrap_medians-setup, include = FALSE}
+# Set seed so that same bootstrap object can be reused later
+set.seed(20170801)
 
-```{r bootstrap_medians, exercise=TRUE}
-# From previous step
+# Create bootstrap distribution of medians
 rent_med_ci <- manhattan %>%
-  specify(response = rent) %>%  
+  specify(response = rent) %>%
   generate(reps = 15000, type = "bootstrap") %>%
   calculate(stat = "median")
-  
+```
+
+```{r bootstrap_medians, exercise = TRUE}
 # Plot the rent_med_ci statistic
 ggplot(___, aes(___)) +
   # Make it a histogram with a binwidth of 50
   ___
 ```
 
-<div id="bootstrap_medians-hint">
+```{r bootstrap_medians-hint, echo = FALSE}
 **Hint:** 
 - Use `ggplot()` with `rent_med_ci` as the dataset.
 - Inside `aes()`, map `x` to `stat`.
 - Add `geom_histogram()`, setting `binwidth` to `50`.
-</div>
+```
 
 ```{r bootstrap_medians-solution}
-# From previous step
-rent_med_ci <- manhattan %>%
-  specify(response = rent) %>%  
-  generate(reps = 15000, type = "bootstrap") %>%
-  calculate(stat = "median")
-  
 # Plot the rent_med_ci statistic
 ggplot(rent_med_ci, aes(x = stat)) +
   # Make it a histogram with a binwidth of 50
@@ -247,8 +245,6 @@ In the previous tutorials you have already discussed percentile and standard err
 ### Bootstrap distribution
 
 ![](images/chp1-vid2-boot-dist-withaxes.png)
-
-
 
 Here is our bootstrap distribution, comprised of 15000 bootstrap medians. Each observation in this plot is a median from a bootstrap sample. And remember that each bootstrap sample is a sample taken with replacement from the original sample, and of the same size as the original sample. 
 
@@ -320,11 +316,11 @@ rent_med_ci %>%
   ) 
 ```
 
-<div id="bootstrap_interval-hint">
+```{r bootstrap_interval-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()`, with `quantile(stat, 0.025)` for the 2.5th percentile.
 - The `probs` arguments for the `l` and `u` quantiles should add up to one.
-</div>
+```
 
 ```{r bootstrap_interval-solution}
 # Calculate bootstrap CI as lower and upper quantiles
@@ -354,11 +350,11 @@ rent_med_obs <- manhattan %>%
 rent_med_obs
 ```
 
-<div id="bootstrap_interval_2-hint">
+```{r bootstrap_interval_2-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()` and `median_rent` to the median of `rent`.
 - Use `pull()` to extract the vector from the data frame.
-</div>
+```
 
 ```{r bootstrap_interval_2-solution}
 rent_med_obs <- manhattan %>%
@@ -378,13 +374,13 @@ Then, determine the critical value.
 - Calculate the degrees of freedom in the dataset.
 - Use the t-distribution to determine the critical value for a 95% confidence interval. *`qt()` takes the percentile of the t-distribution you want to find and the degrees of freedom as arguments.*
 
-
-```{r bootstrap_interval_3, exercise=TRUE}
-# From previous step
+```{r bootstrap_interval_3-setup, include=FALSE}
 rent_med_obs <- manhattan %>%
   summarize(median_rent = median(rent)) %>%
   pull()
-  
+```
+
+```{r bootstrap_interval_3, exercise=TRUE}
 # Calculate the degrees of freedom
 degrees_of_freedom <- ___  
   
@@ -392,18 +388,13 @@ degrees_of_freedom <- ___
 t_star <- ___
 ```
 
-<div id="bootstrap_interval_3-hint">
+```{r bootstrap_interval_3-hint, echo = FALSE}
 **Hint:** 
 - The degrees of freedom is n - 1.
 - Use `qt()`, setting `p` to `0.975` and `df` to the degrees of freedom.
-</div>
+```
 
 ```{r bootstrap_interval_3-solution}
-# From previous step
-rent_med_obs <- manhattan %>%
-  summarize(median_rent = median(rent)) %>%
-  pull()
-  
 # Calculate the degrees of freedom
 degrees_of_freedom <- nrow(manhattan) - 1  
   
@@ -419,15 +410,25 @@ And finally, complete the calculation of the 95% bootstrap confidence interval u
 - Summarize again to calculate the lower and upper limits of the CI.
 - *Compare the interval to the one you calculated in step 1.*
 
+```{r bootstrap_interval_4-setup, include=FALSE}
+# Set seed so that same bootstrap object can be reused later
+set.seed(20170801)
 
-```{r bootstrap_interval_4, exercise=TRUE}
-# From previous steps
+# Create bootstrap distribution of medians
+rent_med_ci <- manhattan %>%
+  specify(response = rent) %>%
+  generate(reps = 15000, type = "bootstrap") %>%
+  calculate(stat = "median")
+
 rent_med_obs <- manhattan %>%
   summarize(median_rent = median(rent)) %>%
   pull()
+
 degrees_of_freedom <- nrow(manhattan) - 1 
 t_star <- qt(0.975, df = degrees_of_freedom)
+```
 
+```{r bootstrap_interval_4, exercise=TRUE}
 # Calculate the CI using the std error method
 rent_med_ci %>%
   # Calculate the std error of the statistic
@@ -437,39 +438,38 @@ rent_med_ci %>%
     l = ___ - ___ * ___,
     u = ___ + ___ * ___
   )
-  
-# Recall the CI using the percentile method from step 1
-rent_med_ci %>%
-  summarize(
-    l = quantile(stat, 0.025),
-    u = quantile(stat, 0.975)
-  )
 ```
 
-<div id="bootstrap_interval_4-hint">
+```{r bootstrap_interval_4-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()` to calculate `boot_se` as the standard deviation of `stat`.
-- Use `summarize()` again, setting `l` to the observed median minus the critical value times the bootstrap standard error.
-</div>
+- Use `summarize()` again, setting `l_se` to the observed median minus the critical value times the bootstrap standard error.
+```
 
 ```{r bootstrap_interval_4-solution}
-# From previous steps
-rent_med_obs <- manhattan %>%
-  summarize(median_rent = median(rent)) %>%
-  pull()
-degrees_of_freedom <- nrow(manhattan) - 1 
-t_star <- qt(0.975, df = degrees_of_freedom)
-
 # Calculate the CI using the std error method
 rent_med_ci %>%
   # Calculate the std error of the statistic
   summarize(boot_se = sd(stat)) %>%
   # Calculate the lower and upper limits of the CI
   summarize(
-    l = rent_med_obs - t_star * boot_se,
-    u = rent_med_obs + t_star * boot_se
+    l_se = rent_med_obs - t_star * boot_se,
+    u_se = rent_med_obs + t_star * boot_se
   )
-  
+```
+
+```{r bootstrap_interval_5-setup, include=FALSE}
+# Set seed so that same bootstrap object can be reused later
+set.seed(20170801)
+
+# Create bootstrap distribution of medians
+rent_med_ci <- manhattan %>%
+  specify(response = rent) %>%
+  generate(reps = 15000, type = "bootstrap") %>%
+  calculate(stat = "median")
+```
+
+```{r bootstrap_interval_5, exercise = TRUE}
 # Recall the CI using the percentile method from step 1
 rent_med_ci %>%
   summarize(
@@ -477,6 +477,7 @@ rent_med_ci %>%
     u = quantile(stat, 0.975)
   )
 ```
+
 
 ### 
 
@@ -544,13 +545,12 @@ glimpse(ncbirths_complete_visits)
 
 ```
 
-
-<div id="doctor-hint">
+```{r doctor-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()` to calculate `boot_se` as the standard deviation of `stat`.
 - Use `summarize()` again, setting `l` to the observed median minus the critical value times the bootstrap standard error.
 - For `u`, change the minus to a plus.
-</div>
+```
 
 ```{r doctor-solution}
 # Filter for rows with non-missing visits
@@ -586,12 +586,12 @@ visit_mean_ci <- ncbirths_complete_visits %>%
   ___(stat = ___)
 ```
 
-<div id="doctor_2-hint">
+```{r doctor_2-hint, echo = FALSE}
 **Hint:** 
 - Use `specify()`, setting `response` to `visits`.
 - Use `generate()`, setting `reps` to `15000` and `type` to `"bootstrap"`.
 - Use `calculate()`, setting `stat` to `"mean"`.
-</div>
+```
 
 ```{r doctor_2-solution}
 # From previous step
@@ -631,11 +631,11 @@ visit_mean_ci %>%
   )
 ```
 
-<div id="doctor_3-hint">
+```{r doctor_3-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()`, setting `l` to the `0.05` quantile of `stat`.
 - The `probs` arguments for the `l` and `u` quantiles should add up to one.
-</div>
+```
 
 ```{r doctor_3-solution}
 # From previous steps
@@ -682,12 +682,12 @@ visit_sd_ci <- ncbirths_complete_visits %>%
 visit_sd_ci
 ```
 
-<div id="doctor_4-hint">
+```{r doctor_4-hint, echo = FALSE}
 **Hint:** 
 - Use `specify()`, setting `response` to `visits`.
 - Use `generate()`, setting `reps` to `15000` and `type` to `"bootstrap"`.
 - Use `calculate()`, setting `stat` to `"sd"`.
-</div>
+```
 
 ```{r doctor_4-solution}
 # Calculate 15000 bootstrap standard deviations of visits
@@ -719,11 +719,11 @@ visit_sd_ci %>%
   )
 ```
 
-<div id="doctor_5-hint">
+```{r doctor_5-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()`, setting `l` to the `0.05` quantile of `stat`.
 - The `probs` arguments for the `l` and `u` quantiles should add up to one.
-</div>
+```
 
 ```{r doctor_5-solution}
 # From previous step
@@ -794,9 +794,9 @@ rent_med_ht <- manhattan %>%
 rent_med_ht
 ```
 
-<div id="apartments-hint">
+```{r apartments-hint, echo = FALSE}
 **Hint:** Call `hypothesize()`, setting `null` to `"point"` and `med` to `2500`.
-</div>
+```
 
 ```{r apartments-solution}
 n_replicates <- 15000
@@ -840,11 +840,11 @@ rent_med_obs <- manhattan %>%
 rent_med_obs
 ```
 
-<div id="apartments_2-hint">
+```{r apartments_2-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()`, setting `median_rent` to the median of `rent`.
 - Use `pull()` to extract the vector from the data frame.
-</div>
+```
 
 ```{r apartments_2-solution}
 # From previous step
@@ -893,11 +893,11 @@ rent_med_ht %>%
   summarize(p_val = ___ / ___)
 ```
 
-<div id="apartments_3-hint">
+```{r apartments_3-hint, echo = FALSE}
 **Hint:** 
 - Use `filter()`, using the condition `stat` greater than or equal to the observed median rent, `rent_med_obs`.
 - Use `summarize()`, setting `p_val` to the number of rows, `n()`, divided by the total number of replicates, `n_replicates`.
-</div>
+```
 
 ```{r apartments_3-solution}
 # From previous step
@@ -979,13 +979,13 @@ weight_mean_ht <- ncbirths %>%
   ___
 ```
 
-<div id="babies-hint">
+```{r babies-hint, echo = FALSE}
 **Hint:** 
 - Use `specify()`, setting `response` to `weight`.
 - Use `hypothesize()`, setting `null` to `"point"` and `mu` to `7`.
 - Use `generate()`, setting `reps` to `n_replicates` and `type` to `"bootstrap"`.
 - Use `calculate()`, setting `stat` to `"sd"`.
-</div>
+```
 
 ```{r babies-solution}
 n_replicates <- 1500
@@ -1022,11 +1022,11 @@ weight_mean_obs <- ncbirths %>%
   ___
 ```
 
-<div id="babies-hint">
+```{r babies_2-hint, echo = FALSE}
 **Hint:** 
 - Use `summarize()`, setting `mean_weight` to the mean of `weight`.
 - Use `pull()` to extract the vector from the data frame.
-</div>
+```
 
 ```{r babies_2-solution}
 # From previous step
@@ -1077,12 +1077,12 @@ weight_mean_ht %>%
   )
 ```
 
-<div id="babies-hint">
+```{r babies_3-hint, echo = FALSE}
 **Hint:** 
 - Use `filter()`, using the condition `stat` greater than or equal to the observed median rent.
 - Use `summarize()`, setting `one_sided_p_val` to the number of rows, `n()`, divided by the total number of replicates, `n_replicates`.
 - Inside `summarize()`, set `two_sided_p_val` to double `one_sided_p_val`.
-</div>
+```
 
 ```{r babies_3-solution}
 # From previous steps
